Correctly compute fun.caller for cloned functions, bug 710780. r=luke