js/src/jsfun.cpp
@@ -1124,7 +1124,7 @@ fun_getProperty(JSContext *cx, JSObject *obj, jsid id, Value *vp)
     if (!fp)
         return true;
 
-    while (!fp->isFunctionFrame() || fp->fun() != fun || fp->isEvalFrame()) {
+    while (!fp->isFunctionFrame() || &fp->callee() != fun || fp->isEvalFrame()) {
         fp = fp->prev();
         if (!fp)
             return true;
